@@ -26,7 +26,7 @@ import org.apache.avro.Schema;
  */
 public interface DatumReader<D> {
 
-  /** Set the schema. */
+  /** Set the writer's schema. */
   void setSchema(Schema schema);
 
   /** Read a datum.  Traverse the schema, depth-first, reading all leaf values
